# masters

./: .gitignore  debug_dataset.py  pyproject.toml  test_tokenized_dataset.py
dataset_gen/: downloader.py
dataset_gen/free_music/: README.md
model_training/: train.py  train_2.py
model_training/dataloader/: audio_tokenized_dataset.py  raw_dataset.py
model_training/model/: JointModel.py  depth.py  frame.py  inputDepth.py  readme.md
model_training/model_testing/: model.py
model_training/tokenizer/: audio_tokenizer.py  dac_audio_tokenizer.py  example_usage.py  interactive.ipynb  mimi_audio_tokenizer.py  test_audio_tokenizer.py  test_batch_audio_tokenizer.py
research/: overview.md  postresearch.md
runs/audio_continuation_20.12:25/: events.out.tfevents.1766229937.lan-fedora.324414.0
runs/audio_continuation_DD.HH:mm/: events.out.tfevents.1766175165.lan-fedora.288899.0  events.out.tfevents.1766175308.lan-fedora.289126.0  events.out.tfevents.1766176053.lan-fedora.291681.0  events.out.tfevents.1766176252.lan-fedora.293533.0  events.out.tfevents.1766176329.lan-fedora.294494.0  events.out.tfevents.1766176432.lan-fedora.294755.0  events.out.tfevents.1766176874.lan-fedora.296036.0  events.out.tfevents.1766177319.lan-fedora.296829.0  events.out.tfevents.1766177427.lan-fedora.297166.0  events.out.tfevents.1766177518.lan-fedora.297336.0  (+15 more)
testiranje_mimi/: codec_mimi.ipynb  dataset.py  magenta.ipynb  pyproject.toml  realtime_diffusion_try01.ipynb  test_dataset.py
testiranje_stable/: codec_stablecodec.ipynb  main.py  pyproject.toml
(+6 files in other folders)
