[project]
name = "magistrska"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
  "ipykernel>=7.1.0",
  "ipywidgets>=8.1.8",
  "torch>=2.7.1",
  "torchaudio>=2.7.1",
  "torchcodec>=0.8.1",
  "transformers>=4.57.1",
  "datasets>=4.4.1",
  "torchview>=0.2.7",
  "flax>=0.12.1",
  "torch-summary>=1.4.5",
  "torchinfo>=1.8.0",
  "descript-audio-codec>=1.0.0",
  "tensorboard>=2.20.0",
  "tqdm>=4.67.1",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]
torchaudio = [{ index = "pytorch-cpu" }]
