[project]
name = "testiranje-stable"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["pypesq @ git+https://github.com/vBaiCai/python-pesq.git"]

[build-system]
requires = ["setuptools>=61.0", "wheel", "numpy<2.0"]
build-backend = "setuptools.build_meta"


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]
torchaudio = [{ index = "pytorch-cpu" }]
